--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,7 @@
     "module": "commonjs",
     "declaration": true,
     "composite": true,
+    "sourceMap": true,
     "incremental": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
